--- a/.ratignore
+++ b/.ratignore
@@ -3,3 +3,9 @@ CONTRIBUTING
 doc/licenses/*/**/*
 doc/**/html/*.html
 guacamole-docker/*.pref
+src/main/webapp/custom/**
+src/main/webapp/*.json
+src/main/resources/*.json
+src/main/**
+guacamole/src/main/frontend/src/images/*.bak
+**/*.bak
